--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,18 @@
 # Core dependencies for data pipeline
-# Add specific packages as needed
 
 # Data processing
-# pandas>=2.0.0
-# numpy>=1.24.0
+pandas>=2.0.0
+numpy>=1.24.0
+pyarrow>=14.0.0  # For parquet file support
 
 # Data ingestion
-# requests>=2.31.0
-# beautifulsoup4>=4.12.0
-
-# Database
-# sqlalchemy>=2.0.0
-# psycopg2-binary>=2.9.0
+requests>=2.31.0
 
 # Configuration
-# pyyaml>=6.0
-# python-dotenv>=1.0.0
+pyyaml>=6.0
+python-dotenv>=1.0.0
 
 # Testing
-# pytest>=7.4.0
-# pytest-cov>=4.1.0
-
-# Logging and monitoring
-# loguru>=0.7.0
+pytest>=7.4.0
+pytest-cov>=4.1.0
 
