Fix .gitignore to properly track inflation_data.csv

--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,9 @@ env/
 data/
 data_outputs/*
 !data_outputs/inflation_data.csv
+!data_outputs/.gitkeep
 *.csv
+!data_outputs/inflation_data.csv
 *.json
 *.parquet
 *.xlsx
