--- a/.github/workflows/weekly_pipeline.yml
+++ b/.github/workflows/weekly_pipeline.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -38,8 +40,12 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add data_outputs/inflation_data.csv
-        git diff --staged --quiet || git commit -m "Update inflation data [skip ci]"
-        git push
+        if git diff --staged --quiet; then
+          echo "No changes to commit"
+        else
+          git commit -m "Update inflation data [skip ci]"
+          git push
+        fi
     
     - name: Upload output CSV
       uses: actions/upload-artifact@v4
